# openv

./: .gitignore  CMakeLists.txt  NOTICE  nim.cfg  openv.nimble
.github/workflows/: release-bundles.yml
CubismSdkForNative/: CHANGELOG.md  LICENSE.md  NOTICE.ja.md  NOTICE.md  README.ja.md  README.md  cubism-info.yml
CubismSdkForNative/Core/: README.ja.md  README.md  RedistributableFiles.txt
CubismSdkForNative/Core/dll/macos/: libLive2DCubismCore.dylib
CubismSdkForNative/Core/dll/windows/x86/: Live2DCubismCore.lib
CubismSdkForNative/Core/dll/windows/x86_64/: Live2DCubismCore.lib
CubismSdkForNative/Core/lib/windows/x86/141/: Live2DCubismCore_MD.lib  Live2DCubismCore_MDd.lib  Live2DCubismCore_MT.lib  Live2DCubismCore_MTd.lib
CubismSdkForNative/Core/lib/windows/x86/142/: Live2DCubismCore_MD.lib  Live2DCubismCore_MDd.lib  Live2DCubismCore_MT.lib  Live2DCubismCore_MTd.lib
CubismSdkForNative/Core/lib/windows/x86/143/: Live2DCubismCore_MD.lib  Live2DCubismCore_MDd.lib  Live2DCubismCore_MT.lib  Live2DCubismCore_MTd.lib
CubismSdkForNative/Core/lib/windows/x86_64/141/: Live2DCubismCore_MD.lib  Live2DCubismCore_MDd.lib  Live2DCubismCore_MT.lib  Live2DCubismCore_MTd.lib
CubismSdkForNative/Core/lib/windows/x86_64/142/: Live2DCubismCore_MD.lib  Live2DCubismCore_MDd.lib  Live2DCubismCore_MT.lib  Live2DCubismCore_MTd.lib
CubismSdkForNative/Core/lib/windows/x86_64/143/: Live2DCubismCore_MD.lib  Live2DCubismCore_MDd.lib  Live2DCubismCore_MT.lib  Live2DCubismCore_MTd.lib
CubismSdkForNative/Samples/Common/: CMakeLists.txt  CubismSampleViewMatrix_Common.cpp  CubismSampleViewMatrix_Common.hpp  LAppSprite_Common.cpp  LAppSprite_Common.hpp  LAppTextureManager_Common.cpp  LAppTextureManager_Common.hpp  LAppView_Common.cpp  LAppView_Common.hpp  LAppWavFileHandler_Common.cpp  LAppWavFileHandler_Common.hpp  MouseActionManager_Common.cpp  MouseActionManager_Common.hpp  TouchManager_Common.cpp  TouchManager_Common.hpp
CubismSdkForNative/Samples/OpenGL/: README.ja.md  README.md
CubismSdkForNative/Samples/OpenGL/Demo/proj.linux.cmake/: CMakeLists.txt
CubismSdkForNative/Samples/OpenGL/Demo/proj.linux.cmake/src/: CMakeLists.txt  CubismUserModelExtend.cpp  CubismUserModelExtend.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppLive2DManager.cpp  LAppLive2DManager.hpp  LAppSprite.cpp  LAppSprite.hpp  LAppTextureManager.cpp  LAppTextureManager.hpp  LAppView.cpp  LAppView.hpp  MouseActionManager.cpp  MouseActionManager.hpp  mainMinimum.cpp
assets/: blendShape.npy  index.html  meanFace.npy  shapeBasis.npy
cpp/: CMakeLists.txt  GlewBootstrap.cpp  SharedMemory.hpp  main.cpp  raylib-live2d.cpp  raylib-live2d.h
cpp/l2d/: LAppAllocator_Common.cpp  LAppAllocator_Common.hpp  LAppDefine.cpp  LAppDefine.hpp  LAppModel.cpp  LAppModel.hpp  LAppModel_Common.cpp  LAppModel_Common.hpp
cpp/render/: CubismClippingContext.cpp  CubismClippingContext.hpp  CubismRenderer_Raylib.cpp  CubismRenderer_Raylib.hpp  CubismShaderSource.hpp  CubismShader_Raylib.cpp  CubismShader_Raylib.hpp
scripts/: wine-smoke.sh
src/: landmark.nim  openv.nim  types.nim
